--- a/flower-shop.css
+++ b/flower-shop.css
@@ -3,6 +3,7 @@
     font-family: Lato;
     font-size: 18px;
     font-weight: 400;
+    font-style: normal;
     margin: 10px 80px;
     
 }
@@ -11,6 +12,7 @@
     font-family: Lato;
     font-size: 40px;
     font-weight: 800;
+    font-style: normal;
     margin: 10px 80px;
     
     
@@ -97,6 +99,7 @@
 }
 
 .pinkflower{
+    /* color: #272727; */
     margin: 20px 250px;
     display: flex;
     list-style: none;
@@ -110,11 +113,11 @@
 }  
 .bannerTitle{
     color: #272727;
-    text-align: center;
+    /* text-align: center; */
     font-family: Lato;
     font-size: 40px;
     font-weight: 800;
-    margin: 120px 200px 10px;
+    margin: 120px 180px 10px;
 }
 .otherColor{
     color: #E55473;
